unpackaged/objects/CAMS_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Name__c</fullName>
        <label>Assignment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>CAMS_Assignment__c</referenceTo>
        <relationshipLabel>CAMS History</relationshipLabel>
        <relationshipName>CAMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Id__c</fullName>
        <label>Name Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CAMS History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Action__c</columns>
        <columns>User__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>CAMS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>